qc pass: atmsar nlpid encapsulation
qc pass: interop0: atmdxi snap
qc pass: interop0: atmdxi nlpid
---------------------------------- 2026-01-03 16:32:22 26.1.3
qc pass: interop0: framerelay gre
---------------------------------- 2026-01-03 23:37:20 26.1.3
qc pass: smds encapsulation
qc pass: smds dxi encapsulation
qc pass: smds nec encapsulation
qc pass: smds nec dxi encapsulation
qc pass: interop0: smds
qc pass: interop0: smds dxi
---------------------------------- 2026-01-04 07:08:11 26.1.4
qc pass: smds with ax25
qc pass: smds tunneling with capwap
qc pass: smds tunneling with dlsw
qc pass: smds tunneling with eoip
qc pass: smds tunneling with erspan
qc pass: smds tunneling with etherip
qc pass: smds tunneling with geneve
qc pass: smds with greppp
qc pass: smds with grefr
qc pass: smds over l2tp3
qc pass: smds tunneling with l2tp3
qc pass: smds tunneling with llcudp
qc pass: smds tunneling with lwapp
qc pass: smds tunneling with nvgre
qc pass: smds tunneling with packet over udp
qc pass: smds tunneling with sreth
qc pass: smds with tdmoudp
qc pass: smds tunneling with tzsp
qc pass: smds tunneling with uti
qc pass: smds tunneling with vxlan
qc pass: cross connect smds interfaces
qc pass: sgt smds encapsulation
qc pass: smds over mpls
qc pass: smds tunneling with mpls
---------------------------------- 2026-01-04 11:30:52 26.1.4
qc pass: framerelay nni
qc pass: interop0: framerelay nni
---------------------------------- 2026-01-04 18:02:37 26.1.4
qc pass: iou ethernet demultiplexer
qc pass: iou serial demultiplexer
---------------------------------- 2026-01-10 16:30:35 26.1.10
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2026-01-10 18:07:18 26.1.10
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2026-01-13 00:05:54 26.1.13
no qc pass: egress label filtering with pvrp
failed: egress label filtering with pvrp