@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.13-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-13 00:20:11, took 00:14:17, with 50 workers, on 4208 cases, 1 failed, 0 traces, 9 retries<br/>
+tested: 2026-01-13 00:49:26, took 00:13:15, with 50 workers, on 4208 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -4034,7 +4034,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp32.tst">rout-pvrp32.tst</a></td><td>success</td><td>pvrp address unsuppression</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp33.tst">rout-pvrp33.tst</a></td><td>success</td><td>pvrp with php labels</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp34.tst">rout-pvrp34.tst</a></td><td>success</td><td>ingress label filtering with pvrp</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp35.tst">rout-pvrp35.tst</a></td><td>#6-run-r2 tping 100 10 2.2.2.1 vrf v1 sou lo0</td><td>egress label filtering with pvrp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp35.tst">rout-pvrp35.tst</a></td><td>success</td><td>egress label filtering with pvrp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp36.tst">rout-pvrp36.tst</a></td><td>success</td><td>pvrp stub node</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp37.tst">rout-pvrp37.tst</a></td><td>success</td><td>pvrp stub interface</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp38.tst">rout-pvrp38.tst</a></td><td>success</td><td>pvrp unstub interface</td></tr>
