@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.13-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-13 00:30:43, took 00:10:03, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2026-01-13 01:00:29, took 00:10:34, with 50 workers, on 857 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
